--- a/vignettes/modelling.Rmd
+++ b/vignettes/modelling.Rmd
@@ -34,10 +34,10 @@ infectionODEs(population, initial_infected, vaccine_calendar, contact_matrix,
 The size of the population size part of each age group and risk group.
 ```{r}
 library(fluEvidenceSynthesis)
-data(age_sizes) # Population divided by age (0 years old, 1 years old, etc.)
+data(demography) # Population divided by age (0 years old, 1 years old, etc.)
 
 # Separate into non elderly (<65) and elderly population
-ag <- stratify_by_age(age_sizes$V1, limits=c(65)) # c( 43670500, 8262600 )
+ag <- stratify_by_age(demography, limits=c(65)) # c( 43670500, 8262600 )
 
 # Separate in risk groups. In this case we assume one additional (high) risk groups and that respectively 
 # 1 percent of non elderly and 40% of elderly are in this risk group. It is possible to
@@ -60,7 +60,7 @@ initial.infected <- stratify_by_risk( ag, matrix(c(0.01,0.4),nrow=1) ) # c(990, 
 The vaccination calendar for a given the year. See the [vaccination vignette](https://blackedder.github.io/flu-evidence-synthesis/vaccination.html) for a more in depth explanation of this object. Here we will assume a constant percentage being vaccinated for four months. The elderly and high risk groups are vaccinated at the highest rate, with no vaccination for the low risk, younger group. 
 
 ```{r}
-vaccine_calendar <- as.vaccination.calendar(
+vaccine_calendar <- as_vaccination_calendar(
   efficacy = c(0.7,0.3),
   coverage = as.data.frame(matrix(c(0,0,0,0,0,0.861,0.123,0.861), nrow = 2, byrow = T)),
   dates = c(as.Date("2010-10-01"), as.Date("2011-02-01")), # begin and end date
@@ -76,13 +76,13 @@ Contact rates between the different age groups.
 ```{r}
 library(fluEvidenceSynthesis)
 data(polymod_uk)
-data(age_sizes)
+data(demography)
 
 # Polymod data is subdivided in seven age groups
 poly <- polymod_uk[,c(1,2,3,9)]
 poly[,3] <- rowSums(polymod_uk[,3:8])
 
-contacts <- contact.matrix(as.matrix(poly), age_sizes$V1, c(65))
+contacts <- contact_matrix(as.matrix(poly), demography, c(65))
 pander(contacts)
 ```
 
