--- a/vignettes/modelling.Rmd
+++ b/vignettes/modelling.Rmd
@@ -12,6 +12,8 @@ vignette: >
 ```{r,include=F}
 library(pander)
 library(ggplot2)
+library(dplyr)
+library(tidyr)
 ```
 
 # Epidemiological model provided by the package
@@ -42,7 +44,8 @@ ag <- stratify_by_age(demography, limits=c(65)) # c( 43670500, 8262600 )
 # Separate in risk groups. In this case we assume one additional (high) risk groups and that respectively 
 # 1 percent of non elderly and 40% of elderly are in this risk group. It is possible to
 # define an additional risk group (e.g. pregnant women) if desired
-population <- stratify_by_risk( ag, matrix(c(0.01,0.4),nrow=1) ) # c( 43233795, 4957560, 436705, 3305040 )
+population <- stratify_by_risk(ag, matrix(c(0.01,0.4),nrow=1), 
+                                labels = c("LowRisk", "HighRisk")) # c( 43233795, 4957560, 436705, 3305040 )
 ```
 The resulting vector holds the low risk population by age group (43233795, 4957560) followed by the high risk (436705, 3305040).
 
@@ -52,7 +55,7 @@ The number of people infected at the beginning of the season, again separated in
 ```{r}
 library(fluEvidenceSynthesis)
 ag <- c(1000,1000)
-initial.infected <- stratify_by_risk( ag, matrix(c(0.01,0.4),nrow=1) ) # c(990, 600, 10, 400)
+initial.infected <- stratify_by_risk( ag, matrix(c(0.01,0.4),nrow=1)) # c(990, 600, 10, 400)
 ```
 
 ### Vaccination calendar
@@ -108,20 +111,12 @@ odes <- infectionODEs( population, initial.infected, vaccine_calendar, contacts,
 pander(head(odes))
 ```
 
-```{r,fig.width=6,fig.height=5}
-fraction.infected <- odes
-fraction.infected$V1 <- fraction.infected$V1/population[1]
-fraction.infected$V2 <- fraction.infected$V2/population[2]
-fraction.infected$V3 <- fraction.infected$V3/population[3]
-fraction.infected$V4 <- fraction.infected$V4/population[4]
+```{r,fig.width=6,fig.height=5, fig.cap = "Fraction infected for each group. Note that the results for both risk groups for ages [65,+) are the same and therefore cover each other"}
+fraction.infected <- odes %>%
+  gather(Group, Incidence, -Time) %>%
+  mutate(fraction = Incidence/population[Group])
 
-ggplot( data=fraction.infected ) + geom_line( aes(x=Time, y=V1, colour = "<65") ) + 
-  geom_line( aes(x=Time,y=V2, colour="65+") )  + 
-  geom_line( aes(x=Time, y=V3, colour="<65 High risk") ) +
-  geom_line( aes(x=Time,y=V4, colour="65+ High risk"),linetype=2 ) +
-  scale_colour_manual("", 
-                      breaks = c("<65","65+","<65 High risk","65+ High risk"),
-                      values = c("darkblue","blue","darkred","red")) +
+ggplot( data=fraction.infected ) + geom_line( aes(x=Time, y=fraction, colour = Group) ) + 
   ylab( "Fraction infected" )
 ```
 
